--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <!-- Container for images -->
     <div class="image-container">
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
+        <img src="images/images (7).jpg" alt="hero image 1">
+        <img src="images/images (9).jpg" alt=" hero Image 2">
     </div>
 
     <!-- Container for navigation buttons -->
