make transition image

--- a/index.html
+++ b/index.html
@@ -47,14 +47,12 @@
 
     <!-- Container for images -->
     <div class="image-container">
-        <img src="images/images (7).jpg" alt="hero image 1">
-        <img src="images/images (9).jpg" alt=" hero Image 2">
+        <div class="coloseal">
+            <img src="images/images (7).webp" alt="coloseal image 1" width="612px" height="500px">
+            <img src="images/images (5).png" alt="coloseal image 1" width="612px" height="500px">
+            <img src="images/images (7).jpg" alt="coloseal image 1" width="612px" height="500px">
+        </div>
     </div>
 
-    <!-- Container for navigation buttons -->
-    <div class="nav-buttons">
-        <button>Backward</button>
-        <button>Forward</button>
-    </div>
 </body>
 </html>
