membuat kotak artikel

--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
             <img src="images/images (7).jpg" alt="coloseal image 1" width="800px" height="500px">
         </div>
     </div>
-
+    <article>
+        <div class="news">
+            <div class="container">
+              <div class="box-article">
+                <h2>Google's Gemini AI</h2>
+                <p>Google has been making significant strides in AI, with Gemini AI reportedly outperforming human experts in various tasks.</p>
+                <div class="icon-container">
+                    <img src="icon/eye (1).svg" alt="eye icon"> <p>Views (7)</p>
+                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px"> <p>Comments (3)</p>
+                </div>
+                </div>
+              </div>
+        </div>
+    </article>
 </body>
 </html>
