menambahkan kotak berita

--- a/index.html
+++ b/index.html
@@ -1,71 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webtech Indonesia</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Navigation bar -->
     <nav class="navbar">
-        <!-- Logo on the left -->
-        <div class="logo"><img src="images/Group 1.png" alt="logo" width="120px"></div>
+      <!-- Logo on the left -->
+      <div class="logo">
+        <img src="images/Group 1.png" alt="logo" width="120px" />
+      </div>
 
-        <!-- Navigation links centered -->
-        <div class="nav-center">
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portofolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
+      <!-- Navigation links centered -->
+      <div class="nav-center">
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portofolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
 
-        <!-- Register and Login buttons on the right -->
-        <div class="nav-buttons">
-            <button onclick="window.location.href='#'">Register</button>
-            <button onclick="window.location.href='#'">Login</button>
-        </div>
+      <!-- Register and Login buttons on the right -->
+      <div class="nav-buttons">
+        <button onclick="window.location.href='#'">Register</button>
+        <button onclick="window.location.href='#'">Login</button>
+      </div>
     </nav>
     <!-- Main content container -->
     <div class="main-container">
-        <!-- Left content: Title and button -->
-        <div class="left-content">
-            <h1 class="title">Welcome To <br>WebTech Indonesia</h1>
-        </div>
-        
-        <!-- Right content: Introduction and description -->
-        <div class="right-content">
-            <p class="description">
-                WebTech Indonesia is a leading technology solutions provider in Indonesia. We specialize in web development, mobile app development, and digital marketing. Our mission is to deliver innovative and reliable solutions to empower businesses. Our vision is to be the foremost technology partner for companies aiming for success. Our values focus on quality, integrity, and customer satisfaction.
-            </p>
-            <button class="get-started-btn">Get Started</button>
-        </div>
+      <!-- Left content: Title and button -->
+      <div class="left-content">
+        <h1 class="title">Welcome To <br />WebTech Indonesia</h1>
+      </div>
+
+      <!-- Right content: Introduction and description -->
+      <div class="right-content">
+        <p class="description">
+          WebTech Indonesia is a leading technology solutions provider in
+          Indonesia. We specialize in web development, mobile app development,
+          and digital marketing. Our mission is to deliver innovative and
+          reliable solutions to empower businesses. Our vision is to be the
+          foremost technology partner for companies aiming for success. Our
+          values focus on quality, integrity, and customer satisfaction.
+        </p>
+        <button class="get-started-btn">Get Started</button>
+      </div>
     </div>
 
     <!-- Container for images -->
     <div class="image-container">
-        <div class="coloseal">
-            <img src="images/images (7).webp" alt="coloseal image 1" width="800px" height="500px">
-            <img src="images/images (5).png" alt="coloseal image 1" width="1000px" height="500px">
-            <img src="images/images (7).jpg" alt="coloseal image 1" width="800px" height="500px">
-        </div>
+      <div class="coloseal">
+        <img
+          src="images/images (7).webp"
+          alt="coloseal image 1"
+          width="800px"
+          height="500px"
+        />
+        <img
+          src="images/images (5).png"
+          alt="coloseal image 1"
+          width="1000px"
+          height="500px"
+        />
+        <img
+          src="images/images (7).jpg"
+          alt="coloseal image 1"
+          width="800px"
+          height="500px"
+        />
+      </div>
     </div>
     <article>
-        <div class="news">
-            <div class="container">
-              <div class="box-article">
-                <h2>Google's Gemini AI</h2>
-                <p>Google has been making significant strides in AI, with Gemini AI reportedly outperforming human experts in various tasks.</p>
-                <div class="icon-container">
-                    <img src="icon/eye (1).svg" alt="eye icon"> <p>Views (7)</p>
-                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px"> <p>Comments (3)</p>
-                </div>
-                </div>
-              </div>
+      <h1>Latest News</h1>
+      <div class="news">
+        <div class="container">
+          <div class="box-article">
+            <img
+              src="images/images (4).png"
+              width="300px"
+              height="200px"
+              alt="google gemini AI photo"
+            />
+            <h2>Google's Gemini AI</h2>
+            <p>
+              Google has been making significant strides in AI, with Gemini AI
+              reportedly outperforming human experts in various tasks.
+            </p>
+            <div class="icon-container">
+              <img src="icon/eye (1).svg" alt="eye icon" />
+              <p>Views (7)</p>
+              <img
+                src="icon/bxs-comment.png"
+                alt="comment icon"
+                width="20px"
+                height="20px"
+              />
+              <p>Comments (3)</p>
+            </div>
+          </div>
+
+          <div class="box-article">
+            <img
+              src="images/images (5).jpg"
+              width="300px"
+              height="200px"
+              alt="AI-Powered Video Editing"
+            />
+            <h2>AI-Powered Video Editing</h2>
+            <p>
+              Google has been making significant strides in AI, with Gemini AI
+              reportedly outperforming human experts in various tasks.
+            </p>
+            <div class="icon-container">
+              <img src="icon/eye (1).svg" alt="eye icon" />
+              <p>Views (7)</p>
+              <img
+                src="icon/bxs-comment.png"
+                alt="comment icon"
+                width="20px"
+                height="20px"
+              />
+              <p>Comments (3)</p>
+            </div>
+          </div>
+
+          <div class="box-article">
+            <img
+              src="images/images (5).webp"
+              width="300px"
+              height="200px"
+              alt="Foldable Phones"
+            />
+            <h2>Foldable Phones</h2>
+            <p>
+              Foldable phones are gaining popularity, with manufacturers like
+              Samsung and Huawei offering a variety of options.
+            </p>
+            <div class="icon-container">
+              <img src="icon/eye (1).svg" alt="eye icon" />
+              <p>Views (7)</p>
+              <img
+                src="icon/bxs-comment.png"
+                alt="comment icon"
+                width="20px"
+                height="20px"
+              />
+              <p>Comments (3)</p>
+            </div>
+          </div>
+
+          <div class="box-article">
+            <img
+              src="images//images (15).jpg"
+              width="300px"
+              height="200px"
+              alt="Foldable Phones"
+            />
+            <h2>Foldable Phones</h2>
+            <p>
+              Foldable phones are gaining popularity, with manufacturers like
+              Samsung and Huawei offering a variety of options.
+            </p>
+            <div class="icon-container">
+              <img src="icon/eye (1).svg" alt="eye icon" />
+              <p>Views (7)</p>
+              <img
+                src="icon/bxs-comment.png"
+                alt="comment icon"
+                width="20px"
+                height="20px"
+              />
+              <p>Comments (3)</p>
+            </div>
+          </div>
         </div>
+      </div>
     </article>
-</body>
+
+    <div class="service-container">
+        <h1>Services</h1>
+        <div class="service-box"></div>
+    </div>
+  </body>
 </html>
