membuat servis dan fortofolio

--- a/index.html
+++ b/index.html
@@ -180,11 +180,180 @@
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <div class="box-article">
+          <img
+            src="images/images (4).png"
+            width="300px"
+            height="200px"
+            alt="google gemini AI photo"
+          />
+          <h2>Google's Gemini AI</h2>
+          <p>
+            Google has been making significant strides in AI, with Gemini AI
+            reportedly outperforming human experts in various tasks.
+          </p>
+          <div class="icon-container">
+            <img src="icon/eye (1).svg" alt="eye icon" />
+            <p>Views (7)</p>
+            <img
+              src="icon/bxs-comment.png"
+              alt="comment icon"
+              width="20px"
+              height="20px"
+            />
+            <p>Comments (3)</p>
+          </div>
+        </div>
+
+        <div class="box-article">
+          <img
+            src="images/images (5).jpg"
+            width="300px"
+            height="200px"
+            alt="AI-Powered Video Editing"
+          />
+          <h2>AI-Powered Video Editing</h2>
+          <p>
+            Google has been making significant strides in AI, with Gemini AI
+            reportedly outperforming human experts in various tasks.
+          </p>
+          <div class="icon-container">
+            <img src="icon/eye (1).svg" alt="eye icon" />
+            <p>Views (7)</p>
+            <img
+              src="icon/bxs-comment.png"
+              alt="comment icon"
+              width="20px"
+              height="20px"
+            />
+            <p>Comments (3)</p>
+          </div>
+        </div>
+
+        <div class="box-article">
+          <img
+            src="images/images (5).webp"
+            width="300px"
+            height="200px"
+            alt="Foldable Phones"
+          />
+          <h2>Foldable Phones</h2>
+          <p>
+            Foldable phones are gaining popularity, with manufacturers like
+            Samsung and Huawei offering a variety of options.
+          </p>
+          <div class="icon-container">
+            <img src="icon/eye (1).svg" alt="eye icon" />
+            <p>Views (7)</p>
+            <img
+              src="icon/bxs-comment.png"
+              alt="comment icon"
+              width="20px"
+              height="20px"
+            />
+            <p>Comments (3)</p>
+          </div>
+        </div>
+
+        <div class="box-article">
+          <img
+            src="images//images (15).jpg"
+            width="300px"
+            height="200px"
+            alt="Foldable Phones"
+          />
+          <h2>Foldable Phones</h2>
+          <p>
+            Foldable phones are gaining popularity, with manufacturers like
+            Samsung and Huawei offering a variety of options.
+          </p>
+          <div class="icon-container">
+            <img src="icon/eye (1).svg" alt="eye icon" />
+            <p>Views (7)</p>
+            <img
+              src="icon/bxs-comment.png"
+              alt="comment icon"
+              width="20px"
+              height="20px"
+            />
+            <p>Comments (3)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="see-more-btn">See More</button>
     </article>
 
     <div class="service-container">
         <h1>Services</h1>
-        <div class="service-box"></div>
+        <div class="box-service-container">
+            <div class="box-service">
+                <h3>Digital Marketing Consulting and Training</h3>
+                <ol>
+                    <li>Customized digital marketing strategies tailored to Indonesian businesses</li>
+                    <li>SEO optimization</li>
+                    <li>Social media marketing</li>
+                    <li>Content marketing</li>
+                    <li>Email marketing</li>
+                    <li>Google Ads and other paid advertising campaigns</li>
+                    <li>Training workshops and courses</li>
+                </ol>
+                <p>Elevate your online presence with our expert digital marketing services. We help Indonesian businesses achieve their goals through effective strategies and tailored training.</p>
+            </div>
+
+            <div class="box-service">
+                <h3>Website Design and Development</h3>
+                <ol>
+                    <li>Responsive website design</li>
+                    <li>Custom web development</li>
+                    <li>E-commerce solutions</li>
+                    <li>CMS implementation (WordPress, Drupal, etc.)</li>
+                    <li>Web application development</li>
+                </ol>
+                <p>Create a stunning and functional website that engages your audience and drives results. Our skilled developers specialize in crafting custom web solutions for Indonesian businesses.</p>
+            </div>
+
+            <div class="box-service">
+                <h3>Mobile App Development</h3>
+                <ol>
+                    <li>Native app development for iOS and Android</li>
+                    <li>Hybrid app development</li>
+                    <li>Mobile app design</li>
+                    <li>App store optimization</li>
+                
+                </ol>
+                <p>Reach your customers on the go with our mobile app development services. We create innovative and user-friendly apps that enhance your brand and drive engagement.</p>
+            </div>
+
+            <div class="box-service">
+                <h3>Cloud Computing Solutions</h3>
+                <ol>
+                    <li>Cloud infrastructure setup and management</li>
+                    <li>Cloud migration services</li>
+                    <li>Cloud-based data storage and backup</li>
+                    <li>Content marketing</li>
+                    <li>Cloud security solutions</li>
+                   
+                </ol>
+                <p>Optimize your IT infrastructure with our cloud computing solutions. We help Indonesian businesses leverage the power of the cloud to improve efficiency, scalability, and cost-effectiveness.</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="portofolio-container">
+       <select name="" id="">
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+        <option value="">Latest</option>
+       </select>
     </div>
   </body>
 </html>
