--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- Navigation bar -->
     <nav class="navbar">
+        <div class="container-navbar">
       <!-- Logo on the left -->
       <div class="logo">
         <img src="images/Group 1.png" alt="logo" width="120px" />
@@ -30,6 +31,7 @@
         <button onclick="window.location.href='#'">Register</button>
         <button onclick="window.location.href='#'">Login</button>
       </div>
+    </div>
     </nav>
     <!-- Main content container -->
     <div class="main-container">
@@ -344,16 +346,46 @@
     </div>
 
     <div class="portofolio-container">
-       <select name="" id="">
-        <option value="">Latest</option>
-        <option value="">Latest</option>
-        <option value="">Latest</option>
-        <option value="">Latest</option>
-        <option value="">Latest</option>
-        <option value="">Latest</option>
-        <option value="">Latest</option>
-        <option value="">Latest</option>
+        <h1>Portfolio</h1>
+       <select name="select-categories" id="select-categories">
+        <option value="categories">Categories</option>
+        <option value="latest">Latest</option>
+        <option value="website">Website</option>
+        <option value="artificial-intelligence">Artificial Intelligence</option>
+        <option value="idea-website">Idea Website</option>
+        <option value="css">CSS</option>
+        <option value="java-script">JavaScript</option>
+        <option value="php">PHP</option>
        </select>
+       
+       <div class="portofolio-box">
+
+        <img
+          src="images//images (15).jpg"
+          width="300px"
+          height="200px"
+          alt="Foldable Phones"
+        />
+        <h2>Foldable Phones</h2>
+        <p>
+          Foldable phones are gaining popularity, with manufacturers like
+          Samsung and Huawei offering a variety of options.
+        </p>
+        <div class="icon-container">
+          <img src="icon/eye (1).svg" alt="eye icon" />
+          <p>Views (7)</p>
+          <img
+            src="icon/bxs-comment.png"
+            alt="comment icon"
+            width="20px"
+            height="20px"
+          />
+          <p>Comments (3)</p>
+        
+      </div>
+    </div>
+
+       </div>
     </div>
   </body>
 </html>
