make box for portofolio

--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
             <img src="images/images (7).jpg" alt="coloseal image 1" width="800px" height="500px" />
         </div>
     </div>
+    <!-- Latest News -->
     <article>
         <h1>Latest News</h1>
         <div class="news">
             <div class="container">
+                <!-- box for each news -->
                 <div class="box-article">
                     <img src="images/images (4).png" width="300px" height="200px" alt="google gemini AI photo" />
                     <h2>Google's Gemini AI</h2>
@@ -98,6 +100,7 @@
                     </div>
                 </div>
 
+                <!-- box for each news -->
                 <div class="box-article">
                     <img src="images/images (5).webp" width="300px" height="200px" alt="Foldable Phones" />
                     <h2>Foldable Phones</h2>
@@ -113,6 +116,7 @@
                     </div>
                 </div>
 
+                <!-- box for each news -->
                 <div class="box-article">
                     <img src="images//images (15).jpg" width="300px" height="200px" alt="Foldable Phones" />
                     <h2>Foldable Phones</h2>
@@ -127,70 +131,75 @@
                         <p>Comments (3)</p>
                     </div>
                 </div>
+
+                <!-- box for each news -->
+                    <div class="box-article">
+                        <img src="images/images (4).png" width="300px" height="200px" alt="google gemini AI photo" />
+                        <h2>Google's Gemini AI</h2>
+                        <p>
+                            Google has been making significant strides in AI, with Gemini AI
+                            reportedly outperforming human experts in various tasks.
+                        </p>
+                        <div class="icon-container">
+                            <img src="icon/eye (1).svg" alt="eye icon" />
+                            <p>Views (7)</p>
+                            <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
+                            <p>Comments (3)</p>
+                        </div>
+                    </div>
+                    
+                    <!-- box for each news -->
+                    <div class="box-article">
+                        <img src="images/images (5).jpg" width="300px" height="200px" alt="AI-Powered Video Editing" />
+                        <h2>AI-Powered Video Editing</h2>
+                        <p>
+                            Google has been making significant strides in AI, with Gemini AI
+                            reportedly outperforming human experts in various tasks.
+                        </p>
+                        <div class="icon-container">
+                            <img src="icon/eye (1).svg" alt="eye icon" />
+                            <p>Views (7)</p>
+                            <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
+                            <p>Comments (3)</p>
+                        </div>
+                    </div>
+
+                    <!-- box for each news -->
+                    <div class="box-article">
+                        <img src="images/images (5).webp" width="300px" height="200px" alt="Foldable Phones" />
+                        <h2>Foldable Phones</h2>
+                        <p>
+                            Foldable phones are gaining popularity, with manufacturers like
+                            Samsung and Huawei offering a variety of options.
+                        </p>
+                        <div class="icon-container">
+                            <img src="icon/eye (1).svg" alt="eye icon" />
+                            <p>Views (7)</p>
+                            <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
+                            <p>Comments (3)</p>
+                        </div>
+                    </div>
+
+                    <!-- box for each news -->
+                    <div class="box-article">
+                        <img src="images//images (15).jpg" width="300px" height="200px" alt="Foldable Phones" />
+                        <h2>Foldable Phones</h2>
+                        <p>
+                            Foldable phones are gaining popularity, with manufacturers like
+                            Samsung and Huawei offering a variety of options.
+                        </p>
+                        <div class="icon-container">
+                            <img src="icon/eye (1).svg" alt="eye icon" />
+                            <p>Views (7)</p>
+                            <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
+                            <p>Comments (3)</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
-        <div class="container">
-            <div class="box-article">
-                <img src="images/images (4).png" width="300px" height="200px" alt="google gemini AI photo" />
-                <h2>Google's Gemini AI</h2>
-                <p>
-                    Google has been making significant strides in AI, with Gemini AI
-                    reportedly outperforming human experts in various tasks.
-                </p>
-                <div class="icon-container">
-                    <img src="icon/eye (1).svg" alt="eye icon" />
-                    <p>Views (7)</p>
-                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
-                    <p>Comments (3)</p>
-                </div>
-            </div>
-
-            <div class="box-article">
-                <img src="images/images (5).jpg" width="300px" height="200px" alt="AI-Powered Video Editing" />
-                <h2>AI-Powered Video Editing</h2>
-                <p>
-                    Google has been making significant strides in AI, with Gemini AI
-                    reportedly outperforming human experts in various tasks.
-                </p>
-                <div class="icon-container">
-                    <img src="icon/eye (1).svg" alt="eye icon" />
-                    <p>Views (7)</p>
-                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
-                    <p>Comments (3)</p>
-                </div>
-            </div>
-
-            <div class="box-article">
-                <img src="images/images (5).webp" width="300px" height="200px" alt="Foldable Phones" />
-                <h2>Foldable Phones</h2>
-                <p>
-                    Foldable phones are gaining popularity, with manufacturers like
-                    Samsung and Huawei offering a variety of options.
-                </p>
-                <div class="icon-container">
-                    <img src="icon/eye (1).svg" alt="eye icon" />
-                    <p>Views (7)</p>
-                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
-                    <p>Comments (3)</p>
-                </div>
-            </div>
-
-            <div class="box-article">
-                <img src="images//images (15).jpg" width="300px" height="200px" alt="Foldable Phones" />
-                <h2>Foldable Phones</h2>
-                <p>
-                    Foldable phones are gaining popularity, with manufacturers like
-                    Samsung and Huawei offering a variety of options.
-                </p>
-                <div class="icon-container">
-                    <img src="icon/eye (1).svg" alt="eye icon" />
-                    <p>Views (7)</p>
-                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
-                    <p>Comments (3)</p>
-                </div>
-            </div>
-        </div>
         </div>
         <button class="see-more-btn">See More</button>
     </article>
@@ -256,6 +265,7 @@
         </div>
     </div>
 
+    <!-- container for portofolio -->
     <div class="portofolio-container">
         <h1>Portfolio</h1>
         <select name="select-categories" id="select-categories">
@@ -269,9 +279,12 @@
             <option value="php">PHP</option>
         </select>
 
+        <!-- portofolio boxs -->
+         <div class="portofolio-boxs">
+        <!-- portofolio for each box -->
         <div class="portofolio-box">
             <div class="image-parent">
-                <img src="images//images (1).jpg" width="500px" height="400px" alt="Idea web design" />
+                <img src="images//images (1).jpg" width="400px" height="300px" alt="Idea web design" />
                 <p class="cloud-tag">Web</p>
 
 
@@ -281,14 +294,10 @@
                 I created this website to help people find inspiration in creating web designs.
             </p>
             <button class="read-more">Read More</button>
-            <div class="icon-container portofolio-real">
+            <hr>
+            <div class="icon-container-portofolio">
                 <div>
-
-                    <img src="icon/eye (1).svg" alt="eye icon" />
-                    <p>Views (7)</p>
-                </div>
-                <div>
-
+                    <img src="icon/eye (1).svg" alt="eye icon" /><p>Views (7)</p>
                     <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
                     <p>Comments (3)</p>
                 </div>
@@ -300,7 +309,34 @@
             </div>
         </div>
 
+        <div class="portofolio-box">
+            <div class="image-parent">
+                <img src="images//images (1).jpg" width="400px" height="300px" alt="Idea web design" />
+                <p class="cloud-tag">Web</p>
+
+
+            </div>
+            <h2>Idea Design Web</h2>
+            <p>
+                I created this website to help people find inspiration in creating web designs.
+            </p>
+            <button class="read-more">Read More</button>
+            <hr>
+            <div class="icon-container-portofolio">
+                <div>
+                    <img src="icon/eye (1).svg" alt="eye icon" /><p>Views (7)</p>
+                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
+                    <p>Comments (3)</p>
+                </div>
+               
+                <div class="name-author-date">
+                    <p>2021-08-29 18:07:31 <br> Haris F. Watson</p>
+                </div>
+
+            </div>
+        </div>
     </div>
+</div>
     </div>
 </body>
 
