membuat kotak portofolio

--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
     <!-- container for portofolio -->
     <div class="portofolio-container">
         <h1>Portfolio</h1>
+        <!-- categories select  -->
         <select name="select-categories" id="select-categories">
             <option value="categories">Categories</option>
             <option value="latest">Latest</option>
@@ -308,7 +309,7 @@
 
             </div>
         </div>
-
+        <!-- portofolio for each box -->
         <div class="portofolio-box">
             <div class="image-parent">
                 <img src="images//images (1).jpg" width="400px" height="300px" alt="Idea web design" />
@@ -335,6 +336,34 @@
 
             </div>
         </div>
+        <!-- portofolio for each box -->
+        <div class="portofolio-box">
+            <div class="image-parent">
+                <img src="images//images (1).jpg" width="400px" height="300px" alt="Idea web design" />
+                <p class="cloud-tag">Web</p>
+
+
+            </div>
+            <h2>Idea Design Web</h2>
+            <p>
+                I created this website to help people find inspiration in creating web designs.
+            </p>
+            <button class="read-more">Read More</button>
+            <hr>
+            <div class="icon-container-portofolio">
+                <div>
+                    <img src="icon/eye (1).svg" alt="eye icon" /><p>Views (7)</p>
+                    <img src="icon/bxs-comment.png" alt="comment icon" width="20px" height="20px" />
+                    <p>Comments (3)</p>
+                </div>
+               
+                <div class="name-author-date">
+                    <p>2021-08-29 18:07:31 <br> Haris F. Watson</p>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 </div>
     </div>
