selesai membuat box portofolio

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="nav-center">
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#news">News</a></li>
+                    <li><a href="#service-nav">Services</a></li>
                     <li><a href="#">Portofolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -67,7 +67,7 @@
     <!-- Latest News -->
     <article>
         <h1>Latest News</h1>
-        <div class="news">
+        <div class="news" id="news">
             <div class="container">
                 <!-- box for each news -->
                 <div class="box-article">
@@ -201,10 +201,10 @@
         </div>
 
         </div>
-        <button class="see-more-btn">See More</button>
+        <button class="see-more-btn">Read More</button>
     </article>
 
-    <div class="service-container">
+    <div class="service-container" id="service-nav">
         <h1>Services</h1>
         <div class="box-service-container">
             <div class="box-service">
@@ -365,8 +365,10 @@
         </div>
 
     </div>
-</div>
+    <button class="read-more portofolio-btn">Read More</button>
     </div>
+
+    <div class="testimonial"></div>
 </body>
 
 </html>
