--- a/index.html
+++ b/index.html
@@ -528,6 +528,29 @@
                     </div>
     </div>
     </div>
+    <!-- footer  -->
+    <footer class="footer">
+        <div class="footer-container">
+            <nav class="footer-nav">
+                <a href="#contact">Contact Us</a>
+                <a href="#news">News</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#blog">Blog</a>
+            </nav>
+            <div class="footer-social">
+                <a href="#" class="social-icon">
+                    <img src="icon/youtube.png" alt="YouTube">
+                </a>
+                <a href="#" class="social-icon">
+                    <img src="icon/fb.png" alt="Facebook">
+                </a>
+                <a href="#" class="social-icon">
+                    <img src="icon/twitter.png" alt="Twitter">
+                </a><br>
+                &copy; Designed by: Monica Ernestine
+            
+        </div>
+    </footer>
 </body>
 
 </html>
