--- a/index.html
+++ b/index.html
@@ -531,12 +531,6 @@
     <!-- footer  -->
     <footer class="footer">
         <div class="footer-container">
-            <nav class="footer-nav">
-                <a href="#contact">Contact Us</a>
-                <a href="#news">News</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#blog">Blog</a>
-            </nav>
             <div class="footer-social">
                 <a href="#" class="social-icon">
                     <img src="icon/youtube.png" alt="YouTube">
@@ -546,10 +540,18 @@
                 </a>
                 <a href="#" class="social-icon">
                     <img src="icon/twitter.png" alt="Twitter">
-                </a><br>
-                &copy; Designed by: Monica Ernestine
-            
-        </div>
+                </a>
+                
+            </div>
+            <nav class="footer-nav">
+                <a href="#contact">Contact Us</a>
+                <a href="#news">News</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#blog">Blog</a>
+            </nav>
+            <div class="copyright">
+            &copy; Designed by: Monica Ernestine
+            </div>
     </footer>
 </body>
 
