--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 <a href="#blog">Blog</a>
             </nav>
             <div class="copyright">
-            &copy; Designed by: Monica Ernestine
+            &copy; Designed by: Monica Ernestinee
             </div>
     </footer>
 </body>
