--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <button onclick="window.location.href='#'">Register</button>
                 <button onclick="window.location.href='#'">Login</button>
             </div>
+            <div class="menu-icon" id="menu-icon"><img src="icon/bx-menu.png" alt=""></div>
         </div>
     </nav>
     <!-- Main content container -->
@@ -550,7 +551,7 @@
                 <a href="#blog">Blog</a>
             </nav>
             <div class="copyright">
-            &copy; Designed by: Monica Ernestinee
+            &copy; Designed by: Monica Ernestine
             </div>
     </footer>
 </body>
