--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button onclick="window.location.href='#'">Register</button>
                 <button onclick="window.location.href='#'">Login</button>
             </div>
-            <div class="menu-icon" id="menu-icon"><img src="icon/bx-menu.png" alt=""></div>
+        
         </div>
     </nav>
     <!-- Main content container -->
@@ -66,9 +66,9 @@
         </div>
     </div>
     <!-- Latest News -->
-    <article>
+    <article id="news">
         <h1>Latest News</h1>
-        <div class="news" id="news">
+        <div class="news" >
             <div class="container">
                 <!-- box for each news -->
                 <div class="box-article">
